k8s/smart-dinings-back-office/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-dinings-back-office
spec:
  replicas: 2
  selector:
    matchLabels:
      app: smart-dinings-back-office
  template:
    metadata:
      labels:
        app: smart-dinings-back-office
    spec:
      containers:
      - name: smart-dinings-back-office
        image: bogdansolga/smart-dinings-back-office:0.0.5-2024-08-31
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 300m
            memory: 256Mi
