k8s/smart-dinings-back-office/service.yml
apiVersion: v1
kind: Service
metadata:
  name: smart-dinings-back-office
spec:
  selector:
    app: smart-dinings-back-office
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
