k8s/smart-dinings-back-office/ingress-back-office.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-dinings-back-office-ingress
  namespace: smart-dinings
  annotations:
    spec.ingressClassName: traefik
spec:
  rules:
    - host: back-office.pre.smartdinings.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smart-dinings-back-office
                port:
                  number: 80
